// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Module - General > Module - Import (fail) > "use strict"
;with (x) y; 1`] = `
"SyntaxError [2:6-2:7]: Strict mode code may not include a with statement
  1 | "use strict"
> 2 | ;with (x) y;
    |       ^ Strict mode code may not include a with statement"
`;

exports[`Module - General > Module - Import (fail) > (class { *method() { export default null; } }); 1`] = `
"SyntaxError [1:21-1:27]: The export keyword can only be used with the module goal
> 1 | (class { *method() { export default null; } });
    |                      ^^^^^^ The export keyword can only be used with the module goal"
`;

exports[`Module - General > Module - Import (fail) > ? 1`] = `
"SyntaxError [1:0-1:1]: Unexpected token: '?'
> 1 | ?
    | ^ Unexpected token: '?'"
`;

exports[`Module - General > Module - Import (fail) > class X { foo() { with (x) y; } } 1`] = `
"SyntaxError [1:23-1:24]: Strict mode code may not include a with statement
> 1 | class X { foo() { with (x) y; } }
    |                        ^ Strict mode code may not include a with statement"
`;

exports[`Module - General > Module - Import (fail) > do return while(false); 1`] = `
"SyntaxError [1:3-1:9]: Illegal return statement
> 1 | do return while(false);
    |    ^^^^^^ Illegal return statement"
`;

exports[`Module - General > Module - Import (fail) > export * from "foo" null; 1`] = `
"SyntaxError [1:20-1:24]: Unexpected token: 'null'
> 1 | export * from "foo" null;
    |                     ^^^^ Unexpected token: 'null'"
`;

exports[`Module - General > Module - Import (fail) > export default const x = null; 1`] = `
"SyntaxError [1:15-1:20]: Unexpected token: 'const'
> 1 | export default const x = null;
    |                ^^^^^ Unexpected token: 'const'"
`;

exports[`Module - General > Module - Import (fail) > export default function* () {}(); 1`] = `
"SyntaxError [1:32-1:33]: Expected '=>'
> 1 | export default function* () {}();
    |                                 ^ Expected '=>'"
`;

exports[`Module - General > Module - Import (fail) > export default null null; 1`] = `
"SyntaxError [1:20-1:24]: Unexpected token: 'null'
> 1 | export default null null;
    |                     ^^^^ Unexpected token: 'null'"
`;

exports[`Module - General > Module - Import (fail) > function () { import { default } from "module"; 1`] = `
"SyntaxError [1:9-1:10]: Function declaration must have a name in this context
> 1 | function () { import { default } from "module";
    |          ^ Function declaration must have a name in this context"
`;

exports[`Module - General > Module - Import (fail) > function foo() { }; export foo; 1`] = `
"SyntaxError [1:27-1:30]: Unexpected token: 'identifier'
> 1 | function foo() { }; export foo;
    |                            ^^^ Unexpected token: 'identifier'"
`;

exports[`Module - General > Module - Import (fail) > function foo() { export default function() { } } 1`] = `
"SyntaxError [1:17-1:23]: The export keyword can only be used with the module goal
> 1 | function foo() { export default function() { } }
    |                  ^^^^^^ The export keyword can only be used with the module goal"
`;

exports[`Module - General > Module - Import (fail) > if (false) {} else export default null; 1`] = `
"SyntaxError [1:19-1:25]: Unexpected token: 'export'
> 1 | if (false) {} else export default null;
    |                    ^^^^^^ Unexpected token: 'export'"
`;

exports[`Module - General > Module - Import (fail) > if (false) {} else return; 1`] = `
"SyntaxError [1:19-1:25]: Illegal return statement
> 1 | if (false) {} else return;
    |                    ^^^^^^ Illegal return statement"
`;

exports[`Module - General > Module - Import (fail) > if (false) return; 1`] = `
"SyntaxError [1:11-1:17]: Illegal return statement
> 1 | if (false) return;
    |            ^^^^^^ Illegal return statement"
`;

exports[`Module - General > Module - Import (fail) > import "module" ++ } 1`] = `
"SyntaxError [1:16-1:18]: Unexpected token: '++'
> 1 | import "module" ++ }
    |                 ^^ Unexpected token: '++'"
`;

exports[`Module - General > Module - Import (fail) > import { default } from "module" ++ } 1`] = `
"SyntaxError [1:17-1:18]: Invalid keyword
> 1 | import { default } from "module" ++ }
    |                  ^ Invalid keyword"
`;

exports[`Module - General > Module - Import (fail) > return; 1`] = `
"SyntaxError [1:0-1:6]: Illegal return statement
> 1 | return;
    | ^^^^^^ Illegal return statement"
`;

exports[`Module - General > Module - Import (fail) > test262: import v from "foo"; 1`] = `
"SyntaxError [1:16-1:17]: Expected '('
> 1 | test262: import v from "foo";
    |                 ^ Expected '('"
`;

exports[`Module - General > Module - Import (fail) > var f; function f() {} 1`] = `
"SyntaxError [1:16-1:17]: Duplicate binding 'f'
> 1 | var f; function f() {}
    |                 ^ Duplicate binding 'f'"
`;

exports[`Module - General > Module - Import (fail) > var g; function* g() {} 1`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'g'
> 1 | var g; function* g() {}
    |                  ^ Duplicate binding 'g'"
`;

exports[`Module - General > Module - Import (fail) > yield; 1`] = `
"SyntaxError [1:0-1:5]: 'yield' may not be used as an identifier in this context
> 1 | yield;
    | ^^^^^ 'yield' may not be used as an identifier in this context"
`;
